# ss-utils-bamboohr

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
api_playground/: grounding.py
notebooks/: playground.ipynb
src/ss_utils_bamboohr/: __init__.py  _client.py  exceptions.py  models.py
tests/: conftest.py
tests/integration/: test_download_file.py  test_get_application.py  test_get_applications.py
tests/unit/: test_add_application_comment.py  test_download_file.py  test_fetch_candidates_pipeline.py  test_get_application.py  test_get_applications.py  test_status_labels.py
